# dimtown-spider

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.html  test.py
.github/workflows/: python-app.yml  ruff-check.yml
dimtown/: AnimeAvatar.py  ArtAlbum.py  CoupleAvatar.py  FemaleAvatar.py  Figure.py  MaleAvatar.py  SelectedIllustrations.py  SelectedPixiv.py  __init__.py  cosplay.py  hanfu.py  jk.py  lolita.py  pcpic.py  phonepic.py  search.py  spider.py  utils.py
