[tool.poetry]
name = "dimtown-spider"
version = "0.0.6"
description = "A spider for https://dimtown.com"
authors = ["divandia <106718176+Cvandia@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "dimtown" }]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.23.0"
ujson = ">=5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
