[project]
name = "dimtown-spider"
version = "0.1.2"
description = "A spider"
authors = [
    {name = "Cvandia",email = "106718176+Cvandia@users.noreply.github.com"},
]
dependencies = ["httpx>=0.27.2", "bs4>=0.0.2"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "Apache License 2.0"}

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["dimtown"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = ["ruff>=0.8.0", "pre-commit>=4.0.1"]
